@@ -9,16 +9,14 @@ import org.jboss.arquillian.junit.Arquillian;
 import org.jboss.shrinkwrap.api.ShrinkWrap;
 import org.jboss.shrinkwrap.api.asset.EmptyAsset;
 import org.jboss.shrinkwrap.api.spec.JavaArchive;
-import org.junit.Assert;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
-import javax.inject.Inject;
+import jakarta.inject.Inject;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-@RunWith(Arquillian.class)
 public class OrderLineServiceIT
 {
 
@@ -54,7 +52,7 @@ public class OrderLineServiceIT
    @Test
    public void should_be_deployed()
    {
-      Assert.assertNotNull(orderlineservice);
+      Assertions.assertNotNull(orderlineservice);
    }
 
    @Test
@@ -76,7 +74,7 @@ public class OrderLineServiceIT
 
       // Finds the object from the database and checks it's the right one
       orderLine = orderlineservice.findById(orderLine.getId());
-      assertEquals(new Integer(77), orderLine.getQuantity());
+      assertEquals(Integer.valueOf(77), orderLine.getQuantity());
 
       // Updates the object
       orderLine.setQuantity(88);
@@ -84,7 +82,7 @@ public class OrderLineServiceIT
 
       // Finds the object from the database and checks it has been updated
       orderLine = orderlineservice.findById(orderLine.getId());
-      assertEquals(new Integer(88), orderLine.getQuantity());
+      assertEquals(Integer.valueOf(88), orderLine.getQuantity());
 
       // Deletes the object from the database and checks it's not there anymore
       orderlineservice.remove(orderLine);
